--- a/css/styles.css
+++ b/css/styles.css
@@ -18,29 +18,44 @@ body {
     width: 350px;
     margin: 40px auto; /* centrado  */
     padding: 20px;
-    border: 3px solid #abc1da;
+    border: 3px solid #4a4d52;
     border-radius: 20px;
 
 }
 
+
+/* div de imagen / obejto imagen */
 .imagen-perfil img {
-    width: 120px;
-    height: 120px;
+    width: 150px; /* ancho de la imagen */
+    height: 150px;
     border-radius: 50%; /* forma circular */
     border: 4px solid #4a90e2;
-    margin: 0 auto 20px auto;  
+    margin: 0 auto 5px auto;   
     object-fit: cover; /* ajuste de la imagen */
 }
 
 /* Efecto hover para la imagen de perfil */
 .imagen-perfil img:hover {
     transform: scale(1.1); /* zoom al pasar el cursor */
-    border-color: #ff6b6b; /* cambio de color del borde */
+    border-color: #ff6b6b; /* cambio de color del borde */  
+}
+
+.nombre {
+    font-size: 30px;
+    font-weight: bold;
+    color: #333; /* color del nombre */
+    margin-bottom: 10px;
+}
+
+.profesion {
+    font-size: 23px;
+    color: #4a90e2; /* color letra*/
 }
 
 
-
-
+.descripcion {
+    font-size: 16px;
+}
 
 
 
